--- a/bibliotk/Dockerfile
+++ b/bibliotk/Dockerfile
@@ -19,9 +19,9 @@ EXPOSE 8000
     # criando usuário do sistema para não usar o root, pois não é aconselhável por questões de segurança
 RUN python -m venv /py && \
     /py/bin/pip install --upgrade pip && \
-    apk add --update --no-cache postgresql-client && \
+    apk add --update --no-cache postgresql-client jpeg-dev zlib-dev libjpeg && \
     apk add --update --no-cache --virtual .tmp-build-deps \
-        build-base postgresql-dev musl-dev && \
+        build-base postgresql-dev musl-dev linux-headers && \
     /py/bin/pip install -r /tmp/requirements.txt && \
     rm -rf /tmp && \
     apk del .tmp-build-deps && \
