Configurando o .gitignore para não ficar subindo arquivos locais de build

--- a/bibliotk/.gitignore
+++ b/bibliotk/.gitignore
@@ -1,2 +1,3 @@
-_pycache/
-migrations/_pycache_
+C:\Workspace\segundopi\PI2\bibliotk\bibliotk\app\__pycache__
+C:\Workspace\segundopi\PI2\bibliotk\bibliotk\app\migrations\__pycache__
+*.pyc
