Trabalho em andamento - implementando página de upload do livro e de transcrição para markdown (tive problemas com a migração dos modelos para para o banco de dados)

--- a/bibliotk/Dockerfile
+++ b/bibliotk/Dockerfile
@@ -17,11 +17,11 @@ EXPOSE 8000
     # instalando as bibliotecas e dependencias especificadas em requirements
     # deletando as pastas temporarias após instalar para não desperdiçar espaço
     # criando usuário do sistema para não usar o root, pois não é aconselhável por questões de segurança
-RUN python -m venv /py && \
+    RUN python -m venv /py && \
     /py/bin/pip install --upgrade pip && \
     apk add --update --no-cache postgresql-client jpeg-dev zlib-dev libjpeg && \
     apk add --update --no-cache --virtual .tmp-build-deps \
-        build-base postgresql-dev musl-dev linux-headers && \
+        gcc libc-dev linux-headers musl-dev libxslt-dev libxml2-dev postgresql-dev build-base && \
     /py/bin/pip install -r /tmp/requirements.txt && \
     rm -rf /tmp && \
     apk del .tmp-build-deps && \
