--- a/bibliotk/.gitignore
+++ b/bibliotk/.gitignore
@@ -1,3 +1,3 @@
-C:\Workspace\segundopi\PI2\bibliotk\bibliotk\app\__pycache__
-C:\Workspace\segundopi\PI2\bibliotk\bibliotk\app\migrations\__pycache__
-*.pyc
+__pycache__/
+*.py[cod]
+*$py.class
