cmd no dockerfile

--- a/bibliotk/Dockerfile
+++ b/bibliotk/Dockerfile
@@ -36,3 +36,5 @@ ENV PATH="/py/bin:$PATH"
 
 # setando usuário que não pode criar pastas e tem senha desabilitada
 USER django-user
+
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
